fix discord action

--- a/.github/workflows/docker-beta.yml
+++ b/.github/workflows/docker-beta.yml
@@ -44,7 +44,7 @@ jobs:
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
       -
         name: Discord notification
-        uses: Ilshidur/action-discord
+        uses: Ilshidur/action-discord@master
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         with:
