--- a/.github/workflows/docker-prod.yml
+++ b/.github/workflows/docker-prod.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/easyfnstats-image:latest
+          tags: luc1412/easyfnstats-image:latest
       -
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
