--- a/.github/workflows/docker-beta.yml
+++ b/.github/workflows/docker-beta.yml
@@ -34,6 +34,8 @@ jobs:
         with:
           push: true
           tags: luc1412/easyfnstats-image:beta
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
       -
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
