--- a/EasyFortniteStats-ImageApi.csproj
+++ b/EasyFortniteStats-ImageApi.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="SkiaSharp" Version="2.88.3" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
