--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,14 +1,18 @@
-﻿name: Docker build and push
+﻿name: Docker image
 
 on:
   push:
     branches: [ master, beta ]
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   DOCKER_TAG: ${{ github.ref == 'refs/heads/stable' && 'latest' || 'beta' }}
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -33,5 +37,4 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         with:
-          args: "Docker image easyfnstats-image:${{ env.DOCKER_TAG }} built and pushed to DockerHub"
-        
+          args: "Docker image easyfnstats-image:${{ env.DOCKER_TAG }} built and pushed to DockerHub" 
